fix: align JWT with ms-auth, repair Maven/CI, add specialist agents
Accept session and master secrets from ms-auth, map ROLE_* for hasRole, remove broken YAML profile copies, add GitHub Actions CI, and document domain experts under .ai/.

Co-authored-by: Cursor <cursoragent@cursor.com>